force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/LASERCA__Personal_Credit_Report__c.object-meta.xml
<CustomObject>
    <description>Experian Personal Credit Report, direct connect to Experian</description>
    <label>Personal Credit Report</label>
    <nameField>
        
        <label>Personal Credit Report Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Personal Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>