force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/Adverse_Credit_Notice_1__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Credit_Notice_1__c</fullName>
    <label>Adverse Credit Notice (1)</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>No credit file</fullName>
                
                
                    <label>No credit file</label>
                
                </value>
            
                <value>
                
                    <fullName>Limited credit experience</fullName>
                
                
                    <label>Limited credit experience</label>
                
                </value>
            
                <value>
                
                    <fullName>Collection action or judgment in credit history</fullName>
                
                
                    <label>Collection action or judgment in credit history</label>
                
                </value>
            
                <value>
                
                    <fullName>Garnishment or attachment in credit history</fullName>
                
                
                    <label>Garnishment or attachment in credit history</label>
                
                </value>
            
                <value>
                
                    <fullName>Foreclosure or repossession in credit history</fullName>
                
                
                    <label>Foreclosure or repossession in credit history</label>
                
                </value>
            
                <value>
                
                    <fullName>Delinquent credit obligations (past or present with others)</fullName>
                
                
                    <label>Delinquent credit obligations (past or present with others)</label>
                
                </value>
            
                <value>
                
                    <fullName>Bankruptcy</fullName>
                
                
                    <label>Bankruptcy</label>
                
                </value>
            
                <value>
                
                    <fullName>Excessive number of recent inquiries on credit bureau report</fullName>
                
                
                    <label>Excessive number of recent inquiries on credit bureau report</label>
                
                </value>
            
                <value>
                
                    <fullName>Poor credit performance with us</fullName>
                
                
                    <label>Poor credit performance with us</label>
                
                </value>
            
                <value>
                
                    <fullName>Temporary or irregular employment</fullName>
                
                
                    <label>Temporary or irregular employment</label>
                
                </value>
            
                <value>
                
                    <fullName>Insufficient length of employment</fullName>
                
                
                    <label>Insufficient length of employment</label>
                
                </value>
            
                <value>
                
                    <fullName>Insufficient income for amount of credit requested</fullName>
                
                
                    <label>Insufficient income for amount of credit requested</label>
                
                </value>
            
                <value>
                
                    <fullName>Excessive credit obligations in relation to income</fullName>
                
                
                    <label>Excessive credit obligations in relation to income</label>
                
                </value>
            
                <value>
                
                    <fullName>Temporary residence</fullName>
                
                
                    <label>Temporary residence</label>
                
                </value>
            
                <value>
                
                    <fullName>Insufficient length of residence</fullName>
                
                
                    <label>Insufficient length of residence</label>
                
                </value>
            
                <value>
                
                    <fullName>Unable to verify credit references</fullName>
                
                
                    <label>Unable to verify credit references</label>
                
                </value>
            
                <value>
                
                    <fullName>Unable to verify credit employment</fullName>
                
                
                    <label>Unable to verify credit employment</label>
                
                </value>
            
                <value>
                
                    <fullName>Unable to verify credit income</fullName>
                
                
                    <label>Unable to verify credit income</label>
                
                </value>
            
                <value>
                
                    <fullName>Unable to verify credit residence</fullName>
                
                
                    <label>Unable to verify credit residence</label>
                
                </value>
            
                <value>
                
                    <fullName>We do not grant credit to any applicant on the terms and conditions you have requested</fullName>
                
                
                    <label>We do not grant credit to any applicant on the terms and conditions you have requested</label>
                
                </value>
            
                <value>
                
                    <fullName>Other - Credit Score is below program minimum</fullName>
                
                
                    <label>Other - Credit Score is below program minimum</label>
                
                </value>
            
                <value>
                
                    <fullName>Insufficient number of credit references provided: If you have established credit under another name, you may still qualify for credit by calling this office and providing us with additional information.</fullName>
                
                
                    <label>Insufficient number of credit references provided: If you have established credit under another name, you may still qualify for credit by calling this office and providing us with additional information.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>