force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/Credit_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_2__c</fullName>
    <description>Used to pull FICO score all the way through to Opportunity</description>
    <formula>LASERCA__Credit_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Score Duplicate</label>
    <type>Text</type>
</CustomField>