force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/Credit_Score_Integer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Integer__c</fullName>
    <formula>value( LASERCA__Credit_Score__c )</formula>
    <label>Credit Score (Integer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>