force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/Do_not_trigger_PCRApprovalHandler__c.field-meta.xml
<CustomField>
    <fullName>Do_not_trigger_PCRApprovalHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, fields will be calculated the old way (no email)
If unchecked, fields will be calculated the new way</inlineHelpText>
    <label>Do not trigger PCRApprovalHandler</label>
    <type>Checkbox</type>
</CustomField>