force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Address__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Address__c</fullName>
    <label>Current Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>