force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__AutoPastDue__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__AutoPastDue__c</fullName>
    <label>Auto Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>