force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>