force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Bankruptcy_Score__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Bankruptcy_Score__c</fullName>
    <label>Bankruptcy Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>