force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Charge_off_accounts__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Charge_off_accounts__c</fullName>
    <label>Charge off accounts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>