force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Closed_account_with_zero_balance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Closed_account_with_zero_balance__c</fullName>
    <label>Closed account with zero balance</label>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Account_Status_Type__c</field>
        
            <operation>equals</operation>
        
            <value>Closed</value>
        
        </summaryFilterItems>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Account_Balance__c</field>
        
            <operation>equals</operation>
        
            <value>0</value>
        
        </summaryFilterItems>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>