force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Co_Applicant_Credit_Score_Median__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Co_Applicant_Credit_Score_Median__c</fullName>
    <formula>If (
	ISBLANK( LASERCA__Co_Applicant_Credit_Score_Equifax__c ) || 
	ISBLANK( LASERCA__Co_Applicant_Credit_Score_Experian__c ) || 
	ISBLANK( LASERCA__Co_Applicant_Credit_Score_TransUnion__c ),
			(
					MIN(VALUE(BLANKVALUE(LASERCA__Co_Applicant_Credit_Score_Equifax__c, &apos;10000&apos;)), 
					VALUE(BLANKVALUE(LASERCA__Co_Applicant_Credit_Score_Experian__c, &apos;10000&apos;)), 
					VALUE(BLANKVALUE(LASERCA__Co_Applicant_Credit_Score_TransUnion__c, &apos;10000&apos;)))
			),

	MAX(MIN(VALUE(LASERCA__Co_Applicant_Credit_Score_Experian__c),VALUE(LASERCA__Co_Applicant_Credit_Score_TransUnion__c)), MIN(MAX(VALUE(LASERCA__Co_Applicant_Credit_Score_Experian__c),VALUE(LASERCA__Co_Applicant_Credit_Score_TransUnion__c)),VALUE(LASERCA__Co_Applicant_Credit_Score_Equifax__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-Applicant Credit Score (Median)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>