force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Co_Applicant_Experian_Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Co_Applicant_Experian_Alert_Message__c</fullName>
    <label>Co-Applicant Experian Alert Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>