force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Co_Applicant_TransUnion_Score_Factor__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Co_Applicant_TransUnion_Score_Factor__c</fullName>
    <label>Co-Applicant TransUnion Score Factor</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>