force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Code_3__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Code_3__c</fullName>
    <label>Code 3</label>
    <length>5</length>
    <type>Text</type>
</CustomField>