force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Collection_accounts__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Collection_accounts__c</fullName>
    <label>Collection accounts</label>
    <summaryFilterItems>
        
            <field>LASERCA__Trade_Accounts__c.LASERCA__Credit_Loan_Type__c</field>
        
            <operation>equals</operation>
        
            <value>Collection</value>
        
        </summaryFilterItems>
    <summaryForeignKey>LASERCA__Trade_Accounts__c.LASERCA__Personal_Credit_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>