force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Confirming_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Confirming_Social_Security_Number__c</fullName>
    <label>Confirming Social Security Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>