force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Contact__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Guarantors&apos; credit to be run
If this holds a value, DTI is calculated off Coapplicant Income</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Personal Credit Report</relationshipLabel>
    <relationshipName>Personal_Credit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>