force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Credit_Report_Accessed__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Report_Accessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Report Accessed</label>
    <type>Checkbox</type>
</CustomField>