force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Score__c</fullName>
    <label>Credit Score</label>
    <length>32</length>
    <type>Text</type>
</CustomField>