force-app/main/default/objects/LASERCA__Personal_Credit_Report__c/fields/LASERCA__Credit_Score_Median__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Score_Median__c</fullName>
    <formula>If (
	ISBLANK(LASERCA__Credit_Score_Equifax__c) || 
	ISBLANK(LASERCA__Credit_Score_Experian__c) || 
	ISBLANK(LASERCA__Credit_Score_TransUnion__c),
			(
					MIN(VALUE(BLANKVALUE(LASERCA__Credit_Score_Equifax__c, &apos;10000&apos;)), 
					VALUE(BLANKVALUE(LASERCA__Credit_Score_Experian__c, &apos;10000&apos;)), 
					VALUE(BLANKVALUE(LASERCA__Credit_Score_TransUnion__c, &apos;10000&apos;)))
			),

	MAX(MIN(VALUE(LASERCA__Credit_Score_Experian__c),VALUE(LASERCA__Credit_Score_TransUnion__c)), MIN(MAX(VALUE(LASERCA__Credit_Score_Experian__c),VALUE(LASERCA__Credit_Score_TransUnion__c)),VALUE(LASERCA__Credit_Score_Equifax__c)))
)</formula>
    <label>Credit Score (Median)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>